# raptor

./: Cargo.toml  README.md  config.yml
examples/: .default.yml  algos.rs  config.rs  main.rs
examples/algos/: example_algo.rs
src/: algo.rs  lib.rs  main.rs  market.rs  scheduler.rs  types.rs
src/algo/: market_make.rs
src/market/: bitflyer.rs  bitmex.rs  liquid.rs  vmarket.rs
src/market/bitflyer/: asset.rs  bitflyer.rs  boards.rs  execution.rs  order.rs  params.rs  utils.rs
src/market/bitmex/: bitmex.rs  boards.rs  execution.rs  order.rs  utils.rs
src/market/liquid/: boards.rs  execution.rs  liquid.rs  order.rs  utils.rs
src/market/vmarket/: vmarket.rs  vserver.rs  vstate.rs
src/scheduler/: sched.rs  task.rs
src/types/: algo.rs  atomic.rs  config.rs  market.rs
src/utils/: market.rs
tests/: lib.rs
