[package]
name = "raptor"
version = "0.1.0"
authors = ["mute1997 <mute1008@gmail.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = "0.9.14"
rust-crypto = "0.2.36"
serde = "1.0.90"
serde_derive = "1.0.90"
serde_json = "1.0"
serde_yaml = "0.8"
crossbeam = "0.7"
